InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurityPosition__c/vlocity_ins__FinancialSecurityPosition__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED. Use Security Position (AssetSecurityPosition__c) instead. Represents an investment holding of some security within a financial account.</description>
    <label>Financial Account Security Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Account Security Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>