InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurityPosition__c/fields/vlocity_ins__FinancialAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FinancialAccountId__c</fullName>
    <description>Parent financial account</description>
    <label>Financial Account</label>
    <referenceTo>vlocity_ins__FinancialAccount__c</referenceTo>
    <relationshipLabel>Security Positions</relationshipLabel>
    <relationshipName>Financial_Account_Holdings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>