InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurityPosition__c/fields/vlocity_ins__PolicyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>vlocity_ins__Policy__c</referenceTo>
    <relationshipLabel>Security Positions</relationshipLabel>
    <relationshipName>SecurityPositions</relationshipName>
    <type>Lookup</type>
</CustomField>