InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurityPosition__c/fields/vlocity_ins__SecurityId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SecurityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Security for this holding</description>
    <label>Security</label>
    <referenceTo>vlocity_ins__FinancialSecurity__c</referenceTo>
    <relationshipLabel>Security Positions</relationshipLabel>
    <relationshipName>FinancialSecurityPosition</relationshipName>
    <type>Lookup</type>
</CustomField>