InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurityPosition__c/fields/vlocity_ins__SecurityName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SecurityName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;vlocity_ins__SecurityId__c,vlocity_ins__SecurityId__r.Name,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>