InsuranceOrg/force-app/main/default/objects/vlocity_ins__FinancialSecurityPosition__c/fields/vlocity_ins__SecurityPriceAsOfDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SecurityPriceAsOfDate__c</fullName>
    <formula>vlocity_ins__SecurityId__r.vlocity_ins__PriceAsOfDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Last Updated</label>
    <type>DateTime</type>
</CustomField>